## video_controls.py
from moviepy.editor import VideoFileClip

class VideoControls:
    def __init__(self, play: bool = False, pause: bool = False, rewind: bool = False, fast_forward: bool = False):
        self.play = play
        self.pause = pause
        self.rewind = rewind
        self.fast_forward = fast_forward

    def play_video(self, video_path: str):
        if self.play:
            clip = VideoFileClip(video_path)
            clip.preview()

    def pause_video(self):
        if self.pause:
            # Pause functionality can be implemented based on the video player used.
            # This is a placeholder as MoviePy does not support pause functionality directly.
            pass

    def rewind_video(self):
        if self.rewind:
            # Rewind functionality can be implemented based on the video player used.
            # This is a placeholder as MoviePy does not support rewind functionality directly.
            pass

    def fast_forward_video(self):
        if self.fast_forward:
            # Fast-forward functionality can be implemented based on the video player used.
            # This is a placeholder as MoviePy does not support fast-forward functionality directly.
            pass

if __name__ == "__main__":
    controls = VideoControls(play=True)
    controls.play_video("path_to_your_video_file")
